@@ -1,3 +1,10 @@
+2007-02-06 Carl Anderson <carl.anderson@vadose.org>
+
+	* source/operation/buffer/SubgraphDepthLocater.cpp
+	  (findStabbedSegments):
+	  Implement short-circuit to avoid inner defective
+	  logic.
+
 2007-02-06 Sandro Santilli <strk@refractions.net>
 
 	* tests/xmltester/: Makefile.am, badguy3.xml:
